--- a/HR_Payroll.Web/appsettings.json
+++ b/HR_Payroll.Web/appsettings.json
@@ -18,6 +18,10 @@
     }
   },
   "AllowedHosts": "*",
+  "CompanySettings": {
+    "Name": "My HRMS",
+    "Email": "support@company.com"
+  },
   "ApiBaseUrl": "https://localhost:7109/api/"
   //"ApiBaseUrl": "https://api.drctstech.com/api/"
 }
